<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">To Do App</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">To Do</string>
    <string name="title_section2">Archive</string>
    <string name="title_section3">Email</string>
    <string name="title_section4">History</string>
    
    <string name="todoMess"><i>To Do Item</i></string>
    <string name="todoAdd">Add to List</string>
    <string name="todoArchive">Archive Selected</string>
    <string name="todoDelete">Delete Selected</string>
    
    <string name="archUnarchive">Unarchive</string>
    <string name="archDelete">Delete</string>
    
    <string name="selAll">Select All</string>
    <string name="emSel">Email Selected</string>
    <string name="emUnselAll">Unselect All</string>
    <string name="emailAddress"><i>Enter Email Address</i></string>
    
    <string name="histTotalToDo">Total To Do List Items:</string>
    <string name="histToDoCheck">Checked:</string>
    <string name="histToDoUncheck">Unchecked:</string>
    <string name="histArch">Total Archived Items:</string>
    <string name="histArchCheck">Checked:</string>
    <string name="histArchUncheck">Unchecked:</string>
    

</resources>
