<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/uncheckText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/checkText"
        android:layout_below="@+id/checkText"
        android:text="@string/histToDoUncheck"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/checkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalText"
        android:layout_below="@+id/totalText"
        android:layout_marginLeft="31dp"
        android:text="@string/histToDoCheck"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/archText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/totalText"
        android:layout_centerVertical="true"
        android:text="@string/histArch"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/archCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/uncheckText"
        android:layout_below="@+id/archText"
        android:text="@string/histArchCheck"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/archUncheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/archCheck"
        android:layout_below="@+id/archCheck"
        android:text="@string/histArchUncheck"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="62dp"
        android:text="@string/histTotalToDo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
