<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/emailListViewXML"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/emEmail"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/emSelAllBtn"
        android:choiceMode="multipleChoice" >

    </ListView>

    <Button
        android:id="@+id/emEmail"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/emSel" />

    <EditText
        android:id="@+id/emEmailSpace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/emEmail"
        android:ems="10"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>
    
    <View
       android:id="@+id/fakeView3"
       android:layout_width="0dp"
       android:layout_height="0dp" 
       android:layout_centerInParent="true"/>
      
    <Button
        android:id="@+id/emSelAllBtn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/fakeView3"
        android:text="@string/selAll" />

    <Button
        android:id="@+id/emUnselAll"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fakeView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/emUnselAll" />

</RelativeLayout>
